<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    tools:context="com.example.android.iksmusicalstructure.PlayedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/now_playing"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/playing" />

        <Button
            android:id="@+id/songs"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/songs" />

        <Button
            android:id="@+id/albums"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/albums" />

        <Button
            android:id="@+id/artists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/artists" />

        <Button
            android:id="@+id/playlists"
            style="@style/navigateButtons"
            android:background="#000000"
            android:text="@string/playlists" />
    </LinearLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/add_playlist" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album"
            android:text="@string/add_playlist" />
    </RelativeLayout>


</LinearLayout>
