<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    tools:context="com.example.android.iksmusicalstructure.SongsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/now_playing"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/playing" />

        <Button
            android:id="@+id/songs"
            style="@style/navigateButtons"
            android:background="#000000"
            android:text="@string/songs" />

        <Button
            android:id="@+id/albums"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/albums" />

        <Button
            android:id="@+id/artists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/artists" />

        <Button
            android:id="@+id/playlists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/playlists" />
    </LinearLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play"
            android:text="@string/wonderful_tonight" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263238">

        <ImageView
            android:id="@+id/play_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play_2"
            android:text="@string/tnt" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/play_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play_3"
            android:text="@string/paradise_city" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263238">

        <ImageView
            android:id="@+id/play_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play_4"
            android:text="@string/beat_it" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/play_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play_5"
            android:text="@string/sunshine" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263238">

        <ImageView
            android:id="@+id/play_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play_6"
            android:text="@string/enter_sandman" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/play_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/play_7"
            android:text="@string/your_love" />
    </RelativeLayout>


</LinearLayout>
