<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    tools:context="com.example.android.iksmusicalstructure.AlbumsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/now_playing"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/playing" />

        <Button
            android:id="@+id/songs"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/songs" />

        <Button
            android:id="@+id/albums"
            style="@style/navigateButtons"
            android:background="#000000"
            android:text="@string/albums" />

        <Button
            android:id="@+id/artists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/artists" />

        <Button
            android:id="@+id/playlists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/playlists" />
    </LinearLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album"
            android:text="@string/best_of_clapton" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263238">

        <ImageView
            android:id="@+id/album_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album_2"
            android:text="@string/tnt_album" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/album_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album_3"
            android:text="@string/appetite_for_destruction" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263238">

        <ImageView
            android:id="@+id/album_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album_4"
            android:text="@string/thriller" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/album_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album_5"
            android:text="@string/just_as_i_am" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263238">

        <ImageView
            android:id="@+id/album_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album_6"
            android:text="@string/metallica_album" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F">

        <ImageView
            android:id="@+id/album_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_slideshow" />

        <TextView
            style="@style/SongsStyle"
            android:layout_toRightOf="@id/album_7"
            android:text="@string/true_rave" />
    </RelativeLayout>

</LinearLayout>
