<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    tools:context="com.example.android.iksmusicalstructure.PlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/now_playing"
            style="@style/navigateButtons"
            android:background="#000000"
            android:text="@string/playing" />

        <Button
            android:id="@+id/songs"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/songs" />

        <Button
            android:id="@+id/albums"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/albums" />

        <Button
            android:id="@+id/artists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/artists" />

        <Button
            android:id="@+id/playlists"
            style="@style/navigateButtons"
            android:background="#263238"
            android:text="@string/playlists" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        style="@style/albumCover"
        android:src="@drawable/album_cover" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="@android:color/darker_gray">

        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/search_bar"
            android:layout_below="@id/search_bar"
            android:text="00:00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/search_bar"
            android:layout_below="@id/search_bar"
            android:text="-06:00" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/play"
            android:layout_toLeftOf="@+id/play"
            android:layout_toStartOf="@+id/play"
            android:src="@drawable/ic_skip_previous_black_48dp" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_play_arrow_black_48dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/play"
            android:layout_toEndOf="@+id/play"
            android:layout_toRightOf="@+id/play"
            android:src="@drawable/ic_skip_next_black_48dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:src="@drawable/ic_shuffle_black_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="15dp"
            android:src="@drawable/ic_repeat_black_24dp" />


    </RelativeLayout>


</LinearLayout>
